The bot can now connect to the IRC server and join the set channels. However, all it does is logs. The output is a prototype. That'll be worked on again later.

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,8 @@
 irc:
     server: irc.archivesmc.com
     port: 6667
+    timeout: 120
+    nick: JSONBot
     channels:
         - "#jsonbot-test"
 
@@ -10,3 +12,8 @@ jsonapi:
     username: admin
     password: demo
     salt: ''
+
+logging:
+    simple: true
+    timestamps: true
+    debug: false
